test/examples/analyzer/invalid/004_main_with_parameters.spell
# Method "main" should have no parameters

main (a b) = pass